<b><#selectbg_g>FLAMBOYAN BETA - 2.70B1-B4</#></b>
<*><b>B4</b></*>
<*>Fix Icon Themes Error</*>
<*>Change Transition Animation - Slides for next/back - Smoother than alpha blend animation</*>
<*>Remove any transition effect for Dialog Window</*>
<*>Use Bold Text for Navigation Button</*>
<*>Fix Installer UI for text log position</*>
<*>Add ini_set/ini_get for Vibrate Intensity (0-10). ini_set("vibrate","5") = Half Intensity, ini_set("vibrate","0") = No Vibrate At All</*>
<*>Add ini_set/ini_get for icon_back and icon_next. ini_set("icon_next","@install"), ini_set("icon_back","icons/back")</*>
<*>Fix Installer Freeze on (pthread_detach) - Compileable for Android Build Environment</*>
<*><b>BUILD WITH ANDROID BUILD ENVIRONMENT</b> - Binary Size Reduce By ~60% - BUILD COMMAND: make aroma_installer; make aroma_installer.zip</*>
<*>Add zip build command in building the source</*>
<*>Rewrite building script for windows and linux with Android Build Environment</*>
<*>Modify aroma-config in demo zip to includes some new features</*>
<*>Change <b>update-binary-installer</b> from Galaxy Nexus binary. Sensation user should replace it binary with sensation binary</*>
<*>Beautifier Source Code. Add beautifier tools in source code tree</*>

<*><b>B3</b></*>
<*>Fix Include Back Error</*>
<*>Improve Back Sequence Capability</*>
<*>ADD EVAL Function to execute the script inline from string</*>
<*>ADD GOTO Function to jump back into GOTO Label. gotolabel(), goto().</*>
<*>Update More Demo in Example Zip</*>
<*>Improving Efficiency processes when loading and reloading themes</*>

<*><b>B2</b></*>
<*>Fix color handling on themes</*>
<*>Using bilinear scaling in png.9p</*>
<*>Re-add hebrew support</*>
<*>Add <i>Italic</i> Support with tag \<i>Italic\</i></*>
<*>ADD include function, to include script from different file. look at new aroma-config file and language_select.edify file</*>

<*><b>B1</b></*>
<*>reboot("now","recovery"); and reboot("now","fastbot");</*>