@@ -22,13 +22,13 @@ selectbox(
     "English",            "Welcome to Installer",                                        1,      #-- selected.0 = 1
     "Indonesian",         "Selamat datang di Installer",                                 0,      #-- selected.0 = 2
     "Espanol",            "Bienvenido al Instalador",                                    0,      #-- selected.0 = 3
-    "Simplified Chinesse","欢迎到安装",                                                   0,      #-- selected.0 = 4  
+    "Simplified Chinesse","欢迎您到安装程序",                                              0,      #-- selected.0 = 4
     "French",             "Bienvenue dans l'installateur",                               0,      #-- selected.0 = 5
     "Russian",            "Добро пожаловать в установщик",                               0,      #-- selected.0 = 6
-  	"Italian",            "Benvenuti Installer",                                         0,      #-- selected.0 = 7
-  	"Germany",            "Willkommen bei Installer",									                   0, 		 #-- selected.0 = 8
-  	"Hebrew",             "ברוכים הבאים להתקנה",										                          0		 #-- selected.0 = 9
-  	"Japanese",            "インストーラへようこそ",                               0,      #-- selected.0 = 10
+    "Italian",            "Benvenuti Installer",                                         0,      #-- selected.0 = 7
+    "Germany",            "Willkommen bei Installer",                                    0,      #-- selected.0 = 8
+    "Hebrew",             "ברוכים הבאים למתקין",									                       0, 		 #-- selected.0 = 9
+    "Japanese",           "インストーラへようこそ",                                         0       #-- selected.0 = 10
   #--------[ Initial Value = 0: Unselected, 1: Selected, 2: Group Item, 3: Not Visible ]---------#
 );
 
